--- a/css/fevents.css
+++ b/css/fevents.css
@@ -7,15 +7,35 @@ body{
 #pp-nav{
 	display: none;
 }
-.section{
-	padding-top: 2%;
+#pagepiling{
+	margin-left: 10%;
+}
+.pp-section{
+	width: 90%;
+}
+.eve-header{
+	text-align: center;
+	font-family: 'Cinzel', serif;
+	margin-bottom: 0;
 }
 /* menu */
+#menu{
+	position:fixed;
+	top:0;
+	left:0;
+	bottom: 0;
+	padding: 0;
+	margin:0;
+	z-index: 70;
+	width: 10%;
+	background-color: #1a2c34;
+}
 #menu li{
-	display:inline-block;
-	margin: 8px;
+	display: block;
+	margin: 12%;
 	background-color: rgba(255, 250, 213, 0.95);
 	border-radius: 2px;
+	text-align: center;
 }
 #menu li.active{
 	background:#666;
@@ -25,12 +45,7 @@ body{
 #menu li a{
 	text-decoration:none;
 	color: #023535;
-	font-size: 1.24em;
-}
-@media screen and (max-width: 1366px){
-    #menu li a{
-    	font-size: 1.12em;
-    }
+	font-size: 1.1em;
 }
 #menu li.active a:hover{
 	color: #021313;
@@ -47,25 +62,8 @@ body{
 	padding: 8px 16px;
 	display:block;
 }
-@media screen and (max-width: 1366px){
-    #menu li a,
-	#menu li.active a{
-		padding: 8px 14px;
-		display:block;
-	}
-}
 #menu li.active a{
 	color: #FFFAD5;
-}
-#menu{
-	position:fixed;
-	top:0;
-	left:0;
-	height: 40px;
-	z-index: 70;
-	width: 100%;
-	padding: 0;
-	margin:0;
 }
 /* section1 */
 #section1 .pp-tableCell{
@@ -111,6 +109,17 @@ body{
 #section1 img{
 	transform: translateZ(20px);
 }
+#section1 .container .row:nth-child(4){
+	margin-bottom: 0;
+}
+#eve-name{
+	margin-top: 2%;
+}
+#eve-name p{
+	text-align: center;
+	text-transform: uppercase;
+	color: #FFFAD5;
+}
 /* section 2-13 */
 #section2,#section6,#section10{
 	background: linear-gradient(to right, #8FB259, #192B33); 
@@ -132,7 +141,7 @@ body{
 	vertical-align: top;
 }
 .section .btn-group{
-	margin-top: 3%;
+	margin-top: 1%;
 }
 .section .btn-primary{
 	background: none !important;
@@ -249,17 +258,10 @@ body{
     	padding: 0;
     }
     #section1 .col-xs-3{
-    	padding: 5px;
+    	padding: 6px;
     }
     #section1 .col-xs-3 img{
-    	width: 60px;
-    }
-    #menu li{
-    	margin: 1px;
-    }
-    #menu li a{
-    	font-size: 12px;
-    	padding: 4px 4px;
+    	width: 46px;
     }
     .section:not(:first-child){
     	padding-top: 25%;
