--- a/css/home.css
+++ b/css/home.css
@@ -293,7 +293,7 @@ form{
 	left: 44%;
 	top: 40%;
 }
-/* responsive css */ 
+/* mobile css */ 
 @media screen and (max-width: 540px){
 	.navbar-nav{
 		margin: 0;
@@ -316,16 +316,21 @@ form{
 		font-size: 12px;
 	}
 	#event-screen{
-		padding-top: 30%;
+		padding-top: 2%;
+	}
+	#event-screen div{
+		display: block;
+		width: 100%;
+		height: 53%;
 	}
 	#event-screen h3{
 		font-size: 1.3em;
-		margin-bottom: 10%;
+		margin-bottom: 5%;
 	}
 	#event-screen img{
-		width: 90%;
+		width: 50%;
 		height: 100%;
-		max-height: 200px;
+		max-height: 180px;
 	}
     form{
     	width: 95%;
