--- a/css/home.css
+++ b/css/home.css
@@ -79,6 +79,7 @@ body{
 }
 .navbar li{
 	color: #FFFAD5;
+	cursor: pointer;
 }
 .navbar .navbar-collapse{
 	padding: 0px !important;
@@ -329,8 +330,7 @@ form{
 	}
 	#event-screen img{
 		width: 50%;
-		height: 100%;
-		max-height: 210px;
+		height: 75%;
 	}
     form{
     	width: 95%;
