--- a/css/about.css
+++ b/css/about.css
@@ -463,11 +463,11 @@ main li .container{
 	}
 	.unslider .unslider-nav li{
 		font-size: 1.12em;
-		margin: 4px 14px 0 12px;
-		padding: 6px 10px;
+		margin: 4px 8px 0 0;
+		padding: 6px 12px;
 	}
 	main li .container{
-		padding: 2% 6%;
+		padding: 2% 5%;
 	}
 	#about #timeline{
 		display: block;
@@ -483,13 +483,13 @@ main li .container{
 		width: 100% !important;
 	}
 	#about .tl-content h1{
-		font-size: 1.05em;
+		font-size: 1.1em;
 	}
 	#about .tl-content p{
 		font-size: 1em;
 	}
 	#about .tl-content h1{
-		margin: 26px 0 0 0;
+		margin: 22px 0 0 0;
 	}
 	#about .tl-year p{
 		margin: 0;
