--- a/css/home.css
+++ b/css/home.css
@@ -63,9 +63,15 @@ body{
     width: 100%;
     height: 100%;
 	background: #159957;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #192B33, #8FB259);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #192B33, #8FB259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    opacity: 0.64;
+	background: linear-gradient(270deg, #5E0042, #2C2233, #005869, #00856A, #8DB500);
+	background-size: 1000% 1000%;
+	opacity: 0.64;
+	animation: backgroundg 18s ease infinite;
+}
+@keyframes backgroundg { 
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 .outerd{
 	margin-top: 5%;
@@ -126,12 +132,16 @@ body{
 	color: #FFFAD5;
 }
 .main a{
-	background: #FFD933 !important;
-	color: #105B63 !important;
-	transition: background 0.3s;
+	background: linear-gradient(270deg, #00856a, #005869, #2c2233);
+	background-size: 600% 600%;
+	color: #FFFAD5 !important;
+	animation: backgroundg 9s ease infinite;
 }
 .main a:hover{
-	background: #FFB000 !important;
+	background: #468966 !important;
+}
+.main #dates{
+	color: #f39c41;
 }
 .alert{
 	display: none;
@@ -144,7 +154,7 @@ body{
 form{
 	display: none;
 	position: fixed;
-	padding-top: 2%;
+	padding-top: 1%;
 	padding-left: 3%;
 	top: 5%;
 	z-index: 4000;
@@ -155,9 +165,10 @@ form{
 }
 .form-group{
 	width: 94%;
+	margin: 12px 0 0;
 }
 .form-group:last-child{
-	margin-bottom: 2%;
+	margin-bottom: 1%;
 }
 .form-group.is-focused label{
 	color: #8FB259 !important;
@@ -165,15 +176,25 @@ form{
 .form-group.is-focused .form-control{
 	background-image: linear-gradient(#8FB259, #8FB259), linear-gradient(#8FB259, #8FB259);
 }
+.form-group .cat{
+	padding-top: 1%;
+}
+.form-group .cat span{
+	font-family: 'Mada', sans-serif;
+	color: #bdbdbd;
+}
+.form-group .radio-inline{
+	padding-top: 0;
+}
 @media screen and (max-width: 1366px){
 	form{
-		padding-top: 1%;
+		padding-top: 0;
 	}
 	.form-group:last-child{
-		margin-bottom: 1%;
+		margin-bottom: 0;
 	}
 	.form-group{
-		padding-bottom: 2px;
+		padding-bottom: 0;
 	}
 }
 .btn-primary{
@@ -204,6 +225,23 @@ legend{
 	z-index: 14000;
 	top: 38%;
 	left: 43%;
+}
+.udaan a{
+	background: none;
+	animation: none;
+}
+.udaan img{
+	border-radius: 36px;
+	float: right;
+	width: 5%;
+	height: auto;
+}
+.udaan p{
+	font-family: 'Mada', serif;
+	color: #FFFAD5;
+	float: right;
+	clear: both;
+	margin-right: 1%;
 }
 /* form opening animation */
 .outerv{
@@ -245,7 +283,7 @@ form{
 	height: 100%;
 	text-align: center;
 	z-index: 11003;
-	display: inline;
+	display: inline-block;
 }
 #event-screen div h3{
 	font-family: 'Cinzel', serif;
@@ -316,6 +354,10 @@ form{
 		padding: 6px 16px;
 		font-size: 12px;
 	}
+	.udaan img{
+		width: 15%;
+		height: auto;
+	}
 	#event-screen{
 		padding-top: 2%;
 	}
@@ -334,11 +376,14 @@ form{
 	}
     form{
     	width: 95%;
-    	top: 10%;
+    	top: 4%;
     	left: 3%;
-    	padding-top: 1%;
+    	padding-top: 0;
     	padding-left: 0;
-    }
+	}
+	.form-group .cat span{
+		font-size: 16px;
+	}
     label{
     	display: none;
     }
@@ -350,12 +395,15 @@ form{
     	font-size: 10px !important;
     }
     .form-group:last-child{
-		margin-bottom: 1%;
+		margin-bottom: 0;
+	}
+	.form-group #corr::-webkit-input-placeholder{
+		font-size: 0.74em;
 	}
 	legend{
-		font-size: 2.2em;
-		padding-top: 4%;
-		margin-bottom: 5%;
+		font-size: 2em;
+		padding-top: 3%;
+		margin-bottom: 3%;
 	}
 	#loader{
 		left: 38%;
@@ -363,5 +411,9 @@ form{
 	}
 	#loader img{
 		width: 45%;
+	}
+	.alert{
+		width: 70%;
+		margin-left: 15%;
 	}
 }
