--- a/css/ievents.css
+++ b/css/ievents.css
@@ -41,13 +41,78 @@ html, body {
 body{
 	background: #ffffff url("../img/slide1back.jpg") no-repeat fixed center;
 	background-size: cover;
+	overflow: auto;
+}
+#backv{
+	opacity: 0.45;
 }
 .container{
-	text-align: center;
+	text-align: center;	
 }
-.container h2{
-	font-family: 'Mada', sans-serif;
-	margin-top: 20%;
+.container .row{
+	margin-bottom: 5%;
+}
+.container h1{
+	font-family: 'Cinzel', serif;
+	text-align: center;
+	color: #b25047;
+	margin-top: 2%;
+	margin-bottom: 2%;	
+}
+.container h3{
+	font-family: 'Mada', serif;
+	text-align: center;
+	color: #FFFAD5;
+}
+.container p{
+	font-family: 'Mada', serif;
+	font-size: 1.4em;
+	color: #FFFAD5;
+}
+.container #credits{
+	font-family: 'Cinzel', serif;
+	font-weight: 800;
+	font-size: 2em;
+	color: #b25047;
+}
+.container #credits span{
+	font-family: 'Mada', serif;
+	font-weight: normal;
+	color: #FFFAD5;
+}
+.container .login{
+	color: #a73dc8;
+}
+.container .col-md-12 img{
+	cursor: pointer;
+	width: 80%;
+	height: auto;
+	border-radius: 22px;
+	transition: all 0.2s ease-in-out;
+	filter: sepia(0);
+	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+.container .col-md-12 img:hover{
+	filter: sepia(85%);
+}
+.container iframe{
+	border: none;
+	overflow: hidden;
+	border-radius: 12px;
+}
+/*  */
+.toAnimate {
+	visibility:hidden;
+}
+.toAnimate.visible{
+	visibility:visible;
+}
+
+.dot{
+	position: fixed;
+	width: 30px;
+	height: 30px;
+	background: url("../img/basketball.svg");
 }
 /* page loader */
 #loader-wrapper{
@@ -67,13 +132,12 @@ body{
 /* back button */
 .back-button{
 	position: fixed;
-	right: 49%;
-	bottom: 0;
+	left: 3%;
+	top: 3%;
 	z-index: 9000;
 }
 .back-button p{
 	font-family: 'Mada', sans-serif;
-	font-size: 1.3em;
 }
 .back-button a{
 	text-decoration: none;
@@ -83,4 +147,27 @@ body{
 .back-button a:hover{
 	cursor: pointer;
 	color: #261c19;
+}
+
+@media screen and (max-width: 540px){
+	.container .col-md-12 img{
+		width: 90%;
+		height: auto;
+	}
+	.back-button{
+		left: unset;
+		top: unset;
+		right: 3%;
+		bottom: 1%;
+	}
+	.back-button p{
+		font-size: 1em;
+	}
+	#loader{
+		left: 38%;
+		top: 45%;
+	}
+	#loader img{
+		width: 45%;
+	}
 }
